# KoordASIO

./: .gitignore  .gitmodules  LICENSE.txt  README.md  kdASIOVersion.txt
.github/actions_scripts/: analyse_git_reference.py
.github/autobuild/: get_build_vars.py  windows.ps1
.github/workflows/: autobuild.yml  continuous-integration.yml
autobuild/: continuous-integration.yml
autobuild/windows/: autobuild_windowsinstaller_1_prepare.ps1  autobuild_windowsinstaller_2_build.ps1  autobuild_windowsinstaller_3_copy_files.ps1
kdasioconfig/: CMakeLists.txt  kdasioconfig.cpp  kdasioconfig.h  kdasioconfig.pro  kdasioconfig.ui  kdasioconfigbase.ui
src/: CMakeLists.txt  README.md  installer.cmake  installer.in.iss  portaudio.cmake
src/dechamps_ASIOUtil/: CMakeLists.txt
src/flexasio/: CMakeLists.txt  versioninfo.rc
src/flexasio/FlexASIO/: CMakeLists.txt  cflexasio.cpp  config.cpp  control_panel.cpp  flexasio.cpp  flexasio.h  flexasio.idl  flexasio.rgs  log,cpp  log.cpp  log.h  portaudio.cpp
src/flexasio/FlexASIOTest/: CMakeLists.txt
src/flexasio/FlexASIOUtil/: portaudio.cpp  portaudio.h
src/kdasioconfig/: CMakeLists.txt  README.md  kdasioconfig.cpp  kdasioconfig.h  kdasioconfigbase.ui  koordipics.qrc  main.cpp
windows/: deploy_windows.ps1  installer.nsi  kdinstaller.iss
